# sentinel1_denoise_rs

./: .gitignore  CMakeLists.txt  Cargo.toml  LICENSE  README.md  base_config.ini  build.rs  notes.org  pyproject.toml  setup.py  test_py5.sh
.cargo/: config
engine/: Cargo.toml  build.rs
engine/src/: apply.rs  est_lp.rs  estimate.rs  interface.rs  lib.rs  parse.rs  postprocess.rs  prep_lp.rs  read_from_archive.rs
engine/src/c_solve/: Makefile  scs_solve.c  scs_solve.h
include/: interface.h
interface/: Cargo.toml  build.rs
interface/src/: c_interface.rs  cli.rs  lib.rs  py_interface.rs
src/: anno.rs  apply.rs  c_interface.rs  est_lp.rs  estimate.rs  interface.rs  lib.rs  noise_to_tiff.rs  parse.rs  prep_lp.rs  py_interface.rs  quickrun.rs  read_from_archive.rs  scs_solve.c  scs_solve.h  test_mt.rs
src/c_solve/: Makefile  scs_solve.c  scs_solve.h
src/include/: interface.h  interface.hpp
tests/: Makefile  compile.sh  example_interface.c  interface.h  noise_test.rs  post_test.sh  runc_test.sh  test_clib  test_clib.c  test_denoise_comparison.rs  test_full_monty.rs  test_k_estimation.rs  test_lp.rs  test_pattern.rs  test_post.c  test_subswaths.rs  test_timerow.rs
