[package]
name = "s1-noisefloor-engine"
version = "0.1.0"
authors = ["PeterQLee <leep1995@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
blas = "0.19"
lapack = "*"
openblas-src = {version="0.8", features = ["system"]}
lapack-src = "0.4.0"
blas-src = "*"
quick-xml = "0.14.0"
ndarray = "0.13.0"
numpy = "0.7.0"
hdf5 = "0.6.1"
zip = "0.5.3"
rayon = "1.2.1"
regex = "1.3.1"
tiff = "0.4.0"
libc = "*"
chrono = "*"
rustfft = "3.0.1"
configparser = "0.13.2"

[build-dependencies]
pkg-config = "0.3.16"

[lib]
name = "s1_noisefloor_engine"
path = "src/lib.rs"