[package]
name = "s1-noisefloor-engine"
version = "0.1.1"
authors = ["PeterQLee <leep1995@gmail.com>"]
edition = "2018"


[dependencies]
blas = "0.20"
lapack = "0.16"
openblas-src = {version="0.8", features = ["static"]}
# lapack-src = {version="0.6.0", features = ["openblas"]}
# blas-src = {version="0.6.1", features = ["openblas"] }
quick-xml = "0.14.0"
ndarray = "0.13.0"
numpy = "0.7.0"
hdf5 = {version="0.7.0"}
hdf5-sys = {version="0.7.0",features=["static"]}
zip = "0.5.6"
rayon = "1.2.1"
regex = "1.3.9"
tiff = "0.4.0"
libc = "*"
chrono = "*"
rustfft = "3.0.1"
configparser = "0.13.2"

[lib]
name = "s1_noisefloor_engine"
path = "src/lib.rs"